# TextRendering

./: .gitignore  CMakeLists.txt  README.md
.zed/: tasks.json
Shaders/textShader/: fragment.glsl  vertex.glsl
fonts/: charset.txt  generate-atlas.sh
fonts/font-atlas/: FreeSans.json
include/: MainScene.hpp
include/Assets/: FreeSansJSON.h  FreeSansPNG.h
include/TextRendering/: Font.hpp  FontLoader.hpp  FontMetadata.hpp  GlyphMetadata.hpp  TextObject.hpp
include/TextRendering/Text/: Text.hpp  TextMesh.hpp  TextUI.hpp
src/: MainScene.cpp  main.cpp
src/TextRendering/: Font.cpp  FontLoader.cpp  FontMetadata.cpp  GlyphMetadata.cpp  TextObject.cpp
src/TextRendering/Text/: Text.cpp  TextMesh.cpp  TextUI.cpp
